--- a/public/styles/external/font-awesome.css
+++ b/public/styles/external/font-awesome.css
@@ -1,3 +1,5 @@
+/* Modified from https://site-assets.fontawesome.com/releases/v6.3.0/css/all.css */
+
 /*!
  * Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license (Commercial License)
