--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -71,8 +71,8 @@
         <nav id="navbar">
             <a href="/">
                 <span class="logo">
-                    <span style="color: #ff5555">E</span><span style="color: #ffaa00">e</span><span style="color: #ffff55">j</span><span style="color: #55ff55">i</span><span style="color: #00aa00">t</span><span style="color: #00aaaa">'</span><span style="color: #5555ff">s</span>
-                    <span style="color: #aa00aa" class="logo-tools">Tools</span>
+                    <span style="color: #ff5555" data-value="E">E</span><span style="color: #ffaa00" data-value="e">e</span><span style="color: #ffff55" data-value="j">j</span><span style="color: #55ff55" data-value="i">i</span><span style="color: #00aa00" data-value="t">t</span><span style="color: #00aaaa" data-value="'">'</span><span style="color: #5555ff" data-value="s">s</span>
+                    <span style="color: #aa00aa" class="logo-tools" data-value="Tools">Tools</span>
                 </span>
             </a>
             <span style="float: right">
