feat: commit sha display, refactoring with move to typescript

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -309,6 +309,16 @@ nav,
     color: #505050;
 }
 
+#last-commit-info {
+    color: #b4b4b4;
+    font-size: 14px;
+    margin-left: 20px;
+}
+
+#last-commit-info:after {
+    margin-bottom: -50px;
+}
+
 /*
  ================
    FOOTER UTILS
