--- a/public/styles/pages/tools/calendar.css
+++ b/public/styles/pages/tools/calendar.css
@@ -7,7 +7,7 @@
     margin-top: 0px;
 }
 
-@media only screen and (max-width: 700px) {
+@media (max-width: 700px) {
     #calendar-grid {
         --min-width: unset;
     }
@@ -43,7 +43,7 @@
     text-align: center;
 }
 
-@media only screen and (max-width: 700px) {
+@media (max-width: 700px) {
     #calendar th {
         font-size: 15px;
     }
@@ -91,7 +91,7 @@
     top: 5px;
 }
 
-@media only screen and (max-width: 600px) {
+@media (max-width: 600px) {
     #calendar td {
         font-size: 15px;
     }
@@ -100,7 +100,7 @@
     }
 }
 
-@media only screen and (max-width: 400px) {
+@media (max-width: 400px) {
     #calendar td {
         font-size: 13px;
     }
@@ -139,7 +139,7 @@
 }
 
 #events-list li::marker {
-    content: '—   ';
+    content: "—   ";
 }
 
 #login-password {
@@ -197,7 +197,7 @@
 }
 
 .todo-label .checkbox-container:before {
-    content: '';
+    content: "";
     width: 100%;
     height: 100%;
     background: #506eec;
@@ -213,7 +213,7 @@
 }
 
 .todo-label .todo-label-text:after {
-    content: '';
+    content: "";
     display: block;
     width: 0%;
     height: 2px;
