--- a/public/styles/pages/tools/keycode-info.css
+++ b/public/styles/pages/tools/keycode-info.css
@@ -10,7 +10,7 @@
     width: 70%;
 }
 
-@media only screen and (max-width: 700px) {
+@media (max-width: 700px) {
     .keycodes {
         display: inline-block;
         margin: 8px auto 30px;
@@ -26,7 +26,7 @@
     text-align: center;
 }
 
-@media only screen and (max-width: 700px) {
+@media (max-width: 700px) {
     .keycodes th {
         font-size: 16px;
         padding: 20px;
@@ -46,7 +46,7 @@
     cursor: not-allowed;
 }
 
-@media only screen and (max-width: 700px) {
+@media (max-width: 700px) {
     .keycodes td {
         border-bottom: none;
         font-size: 16px;
