--- a/public/styles/pages/tools/roman-converter.css
+++ b/public/styles/pages/tools/roman-converter.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 700px) {
+@media (max-width: 700px) {
     .roman-numerals {
         display: table;
         margin: 50px 0 0;
