--- a/public/styles/tooltips.css
+++ b/public/styles/tooltips.css
@@ -9,8 +9,8 @@
 }
 
 /* Base styles for the entire tooltip */
-[data-tooltip]:before,
-[data-tooltip]:after {
+[data-tooltip]::before,
+[data-tooltip]::after {
     opacity: 0;
     pointer-events: none;
     position: absolute;
@@ -20,26 +20,26 @@
 }
 
 /* Show the entire tooltip on hover and focus */
-[data-tooltip]:hover:before,
-[data-tooltip]:hover:after,
-[data-tooltip]:focus:before,
-[data-tooltip]:focus:after {
+[data-tooltip]:hover::before,
+[data-tooltip]:hover::after,
+[data-tooltip]:focus::before,
+[data-tooltip]:focus::after {
     opacity: 1;
     visibility: visible;
 }
 
 /* Base styles for the tooltip's directional arrow */
-[data-tooltip]:before {
+[data-tooltip]::before {
     background: transparent;
     border: 6px solid transparent;
-    content: '';
+    content: "";
     z-index: 1001;
 }
 
 /* Base styles for the tooltip's content area */
-[data-tooltip]:after {
+[data-tooltip]::after {
     background-color: #000;
-    background-color: hsla(0, 0%, 17%, 0.9);
+    background-color: rgb(43 43 43 / 90%);
     border-radius: 5px;
     color: #fff;
     content: attr(data-tooltip);
@@ -54,117 +54,117 @@
 /* Directions */
 
 /* Top (default) */
-[data-tooltip]:before,
-[data-tooltip]:after,
-.tooltip-top:before,
-.tooltip-top:after {
+[data-tooltip]::before,
+[data-tooltip]::after,
+.tooltip-top::before,
+.tooltip-top::after {
     bottom: 100%;
     left: 50%;
 }
 
-[data-tooltip]:before,
-.tooltip-top:before {
+[data-tooltip]::before,
+.tooltip-top::before {
     border-top-color: #000;
-    border-top-color: hsla(0, 0%, 17%, 0.9);
+    border-top-color: rgb(43 43 43 / 90%);
     margin-bottom: -12px;
     margin-left: -6px;
 }
 
 /* Horizontally align top/bottom tooltips */
-[data-tooltip]:after,
-.tooltip-top:after {
+[data-tooltip]::after,
+.tooltip-top::after {
     margin-left: -80px;
 }
 
-[data-tooltip]:hover:before,
-[data-tooltip]:hover:after,
-[data-tooltip]:focus:before,
-[data-tooltip]:focus:after,
-.tooltip-top:hover:before,
-.tooltip-top:hover:after,
-.tooltip-top:focus:before,
-.tooltip-top:focus:after {
+[data-tooltip]:hover::before,
+[data-tooltip]:hover::after,
+[data-tooltip]:focus::before,
+[data-tooltip]:focus::after,
+.tooltip-top:hover::before,
+.tooltip-top:hover::after,
+.tooltip-top:focus::before,
+.tooltip-top:focus::after {
     transform: translateY(-12px);
 }
 
 /* Left */
-.tooltip-left:before,
-.tooltip-left:after {
+.tooltip-left::before,
+.tooltip-left::after {
     bottom: 50%;
     left: auto;
     right: 100%;
 }
 
-.tooltip-left:before {
+.tooltip-left::before {
     border-left-color: #000;
-    border-left-color: hsla(0, 0%, 17%, 0.9);
+    border-left-color: rgb(43 43 43 / 90%);
     border-top-color: transparent;
     margin-bottom: 0;
     margin-left: 0;
     margin-right: -12px;
 }
 
-.tooltip-left:hover:before,
-.tooltip-left:hover:after,
-.tooltip-left:focus:before,
-.tooltip-left:focus:after {
+.tooltip-left:hover::before,
+.tooltip-left:hover::after,
+.tooltip-left:focus::before,
+.tooltip-left:focus::after {
     transform: translateX(-12px);
 }
 
 /* Bottom */
-.tooltip-bottom:before,
-.tooltip-bottom:after {
+.tooltip-bottom::before,
+.tooltip-bottom::after {
     bottom: auto;
     left: 50%;
     top: 100%;
 }
 
-.tooltip-bottom:before {
+.tooltip-bottom::before {
     border-bottom-color: #000;
-    border-bottom-color: hsla(0, 0%, 17%, 0.9);
+    border-bottom-color: rgb(43 43 43 / 90%);
     border-top-color: transparent;
     margin-bottom: 0;
     margin-top: -12px;
 }
 
-.tooltip-bottom:hover:before,
-.tooltip-bottom:hover:after,
-.tooltip-bottom:focus:before,
-.tooltip-bottom:focus:after {
+.tooltip-bottom:hover::before,
+.tooltip-bottom:hover::after,
+.tooltip-bottom:focus::before,
+.tooltip-bottom:focus::after {
     transform: translateY(12px);
 }
 
 /* Right */
-.tooltip-right:before,
-.tooltip-right:after {
+.tooltip-right::before,
+.tooltip-right::after {
     bottom: 50%;
     left: 100%;
 }
 
-.tooltip-right:before {
+.tooltip-right::before {
     border-right-color: #000;
-    border-right-color: hsla(0, 0%, 17%, 0.9);
+    border-right-color: rgb(43 43 43 / 90%);
     border-top-color: transparent;
     margin-bottom: 0;
     margin-left: -12px;
 }
 
-.tooltip-right:hover:before,
-.tooltip-right:hover:after,
-.tooltip-right:focus:before,
-.tooltip-right:focus:after {
+.tooltip-right:hover::before,
+.tooltip-right:hover::after,
+.tooltip-right:focus::before,
+.tooltip-right:focus::after {
     transform: translateX(12px);
 }
 
 /* Move directional arrows down a bit for left/right tooltips */
-.tooltip-left:before,
-.tooltip-right:before {
+.tooltip-left::before,
+.tooltip-right::before {
     top: 3px;
 }
 
 /* Vertically center tooltip content for left/right tooltips */
-.tooltip-left:after,
-.tooltip-right:after {
+.tooltip-left::after,
+.tooltip-right::after {
     margin-bottom: -16px;
     margin-left: 0;
 }
