refactor: modify stylelint config, many style fixes

--- a/public/styles/pages/fun/astronomy-picture.css
+++ b/public/styles/pages/fun/astronomy-picture.css
@@ -19,11 +19,8 @@ div#apod-embed-container {
 }
 
 div#apod-embed-container > iframe {
-    bottom: 0;
+    inset: 0;
     height: 100%;
-    left: 0;
     position: absolute;
-    right: 0;
-    top: 0;
     width: 100%;
 }
