--- a/public/styles/pages/fun/mp3-player.css
+++ b/public/styles/pages/fun/mp3-player.css
@@ -13,14 +13,15 @@
 
 #mp3-grid {
     margin-top: 150px;
+
     --min-width: 500px;
 }
 
 #mp3-grid > div {
-    margin-top: 0px;
+    margin-top: 0;
 }
 
-@media (max-width: 700px) {
+@media (width <= 700px) {
     #mp3-grid {
         --min-width: unset;
     }
@@ -53,7 +54,7 @@
     content: "—   ";
 }
 
-@media screen and (max-width: 1010px) {
+@media screen and (width <= 1010px) {
     #mp3-grid-left {
         position: static;
         top: unset;
