--- a/public/styles/pages/tools/calendar.css
+++ b/public/styles/pages/tools/calendar.css
@@ -1,13 +1,14 @@
 #calendar-grid {
     margin-top: 150px;
+
     --min-width: 575px;
 }
 
 #calendar-grid > div {
-    margin-top: 0px;
+    margin-top: 0;
 }
 
-@media (max-width: 700px) {
+@media (width <= 700px) {
     #calendar-grid {
         --min-width: unset;
     }
@@ -19,7 +20,6 @@
     border: 3px solid #31353d;
     border-radius: 15px;
     color: #ffecd1;
-    margin: auto;
     margin: auto;
     padding: 15px;
     width: 85%;
@@ -43,7 +43,7 @@
     text-align: center;
 }
 
-@media (max-width: 700px) {
+@media (width <= 700px) {
     #calendar th {
         font-size: 15px;
     }
@@ -91,19 +91,21 @@
     top: 5px;
 }
 
-@media (max-width: 600px) {
+@media (width <= 600px) {
     #calendar td {
         font-size: 15px;
     }
+
     .moon-icon {
         font-size: 12px;
     }
 }
 
-@media (max-width: 400px) {
+@media (width <= 400px) {
     #calendar td {
         font-size: 13px;
     }
+
     .moon-icon {
         font-size: 9px;
     }
@@ -158,7 +160,6 @@
 /* Inspired by https://codepen.io/avstorm/pen/yjLGGN */
 .todo-label {
     margin: auto;
-    -webkit-user-select: none;
     user-select: none;
     cursor: pointer;
 }
@@ -185,7 +186,7 @@
     top: 3px;
     left: 2px;
     fill: none;
-    stroke: #ffffff;
+    stroke: white;
     stroke-width: 2;
     stroke-linecap: round;
     stroke-linejoin: round;
@@ -196,7 +197,7 @@
     transform: translate3d(0, 0, 0);
 }
 
-.todo-label .checkbox-container:before {
+.todo-label .checkbox-container::before {
     content: "";
     width: 100%;
     height: 100%;
@@ -212,12 +213,12 @@
     margin-left: -5px;
 }
 
-.todo-label .todo-label-text:after {
+.todo-label .todo-label-text::after {
     content: "";
     display: block;
     width: 0%;
     height: 2px;
-    background-color: currentColor;
+    background-color: currentcolor;
     position: absolute;
     top: 50%;
     left: 13px;
@@ -239,18 +240,18 @@
     stroke-dashoffset: 0;
 }
 
-.todo-checkbox:checked + .todo-label .checkbox-container:before {
+.todo-checkbox:checked + .todo-label .checkbox-container::before {
     transform: scale(2.5);
     opacity: 0;
     transition: all 400ms ease;
 }
 
-.todo-checkbox:checked + .todo-label .todo-label-text:after {
+.todo-checkbox:checked + .todo-label .todo-label-text::after {
     width: calc(100% - 25px);
 }
 
 .todo-checkbox:disabled + .todo-label .checkbox-container {
-    background: #9098a94c;
+    background: rgb(144 152 169 / 29.8%);
     border-color: #9098a9;
 }
 
