--- a/public/styles/pages/tools/color-info.css
+++ b/public/styles/pages/tools/color-info.css
@@ -9,7 +9,7 @@
 }
 
 #color-display {
-    background-image: repeating-linear-gradient(45deg, #aaa 25%, transparent 25%, transparent 75%, #aaa 75%, #aaa), repeating-linear-gradient(45deg, #aaa 25%, #fff 25%, #fff 75%, #aaa 75%, #aaa);
+    background-image: repeating-linear-gradient(45deg, #aaa 25%, transparent 25%, transparent 75%, #aaa 75%, #aaa), repeating-linear-gradient(45deg, #aaa 25%, white 25%, white 75%, #aaa 75%, #aaa);
     background-position: 0 0, 5px 5px;
     background-size: 10px 10px;
     border: 4px solid #16181c;
@@ -21,8 +21,8 @@
 }
 
 #color-display::after {
-    background-color: currentColor;
-    content: '';
+    background-color: currentcolor;
+    content: "";
     display: block;
     height: 100%;
     left: 0;
