--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -17,7 +17,7 @@
 
 html {
     background-color: #1f2229;
-    background-image: repeating-linear-gradient(90deg, hsl(280deg 0% 67% / 6%) 0, hsl(280deg 0% 67% / 6%) 1px, transparent 1px, transparent 96px), repeating-linear-gradient(0deg, hsl(280deg 0% 67% / 6%) 0, hsl(280deg 0% 67% / 6%) 1px, transparent 1px, transparent 96px), repeating-linear-gradient(0deg, hsl(280deg 0% 67% / 9%) 0, hsl(280deg 0% 67% / 9%) 1px, transparent 1px, transparent 12px), repeating-linear-gradient(90deg, hsl(280deg 0% 67% / 9%) 0, hsl(280deg 0% 67% / 9%) 1px, transparent 1px, transparent 12px), linear-gradient(90deg, rgb(31 34 41), rgb(31 34 41));
+    background-image: repeating-linear-gradient(90deg, rgb(171 171 171 / 6%) 0, rgb(171 171 171 / 6%) 1px, transparent 1px, transparent 96px), repeating-linear-gradient(0deg, rgb(171 171 171 / 6%) 0, rgb(171 171 171 / 6%) 1px, transparent 1px, transparent 96px), repeating-linear-gradient(0deg, rgb(171 171 171 / 9%) 0, rgb(171 171 171 / 9%) 1px, transparent 1px, transparent 12px), repeating-linear-gradient(90deg, rgb(171 171 171 / 9%) 0, rgb(171 171 171 / 9%) 1px, transparent 1px, transparent 12px), linear-gradient(90deg, rgb(31 34 41), rgb(31 34 41));
     scroll-behavior: smooth;
     scroll-padding-top: 125px;
 }
@@ -72,7 +72,7 @@ kbd {
     background-color: #eee;
     border: 1px solid #b4b4b4;
     border-radius: 3px;
-    box-shadow: 0 1px 1px #0003, 0 2px 0 0 #ffffffb3 inset;
+    box-shadow: 0 1px 1px rgb(0 0 0 / 20%), 0 2px 0 0 rgb(255 255 255 / 70.2%) inset;
     color: #333;
     display: inline-block;
     font-size: 0.85em;
@@ -387,7 +387,7 @@ nav,
 }
 
 #shortcuts {
-    background-color: #0006;
+    background-color: rgb(0 0 0 / 40%);
     display: block;
     height: 100%;
     left: 0;
@@ -405,7 +405,7 @@ nav,
     background-color: #1e2529;
     border: 3px solid #31353d;
     border-radius: 5px;
-    box-shadow: 0 4px 8px 0 #0003, 0 6px 20px 0 #00000030;
+    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 18.8%);
     margin: auto;
     min-width: 300px;
     padding: 0;
@@ -537,7 +537,6 @@ nav,
     background-color: #31363d;
 }
 
-/* stylelint-disable-next-line no-descending-specificity */
 .info-table td {
     border: 4px solid #1b1e24;
     font-size: 18px;
