--- a/views/pages/tools/timer.hbs
+++ b/views/pages/tools/timer.hbs
@@ -1,5 +1,5 @@
 <div class="tooltext">
-    <span style="font-weight: 500; color: dimgray; font-size: 50px"> <input type="text" pattern="[0-9]*" id="hours" max="23" maxlength="2" value="0" class="invisibleinput" />h <input type="text" pattern="[0-9]*" id="minutes" max="59" maxlength="2" value="1" class="invisibleinput" />m <input type="text" pattern="[0-9]*" id="seconds" max="59" maxlength="2" value="0" class="invisibleinput" />s </span>
+    <span style="font-weight: 500; color: dimgray; font-size: 50px"> <input type="text" pattern="[0-9]*" id="hours" max="23" maxlength="2" value="0" class="invisible-input" />h <input type="text" pattern="[0-9]*" id="minutes" max="59" maxlength="2" value="1" class="invisible-input" />m <input type="text" pattern="[0-9]*" id="seconds" max="59" maxlength="2" value="0" class="invisible-input" />s </span>
     <br /><button id="start-timer">Start <i id="timer-result"></i></button>
     <button id="pause-resume-timer" disabled>Pause</button>
     <button id="reset">Reset</button>
