refactor: resolve many typescript issues

--- a/views/pages/fun/astronomy-picture.hbs
+++ b/views/pages/fun/astronomy-picture.hbs
@@ -1,7 +1,7 @@
 <div class="tooltext">
-    <span id="result">Pulling data from the cosmos <i class="fa-solid fa-spinner fa-pulse"></i></span>
+    <div id="result">Pulling data from the cosmos <i class="fa-solid fa-spinner fa-pulse"></i></div>
 
-    <br /><br />Fetch from specified date:<br />
+    <br />Fetch from specified date:<br />
 
     Year:
     <input id="year" type="text" pattern="[0-9]*" maxlength="4" style="width: 45px" />
