refactor: use `div`s instead of `span`s where applicable

--- a/views/pages/fun/eight-ball.hbs
+++ b/views/pages/fun/eight-ball.hbs
@@ -5,8 +5,8 @@
     <hr style="margin: 10px 0" />
     <div id="result">
         You asked:
-        <span id="question-display">Enter question above!</span><br />
+        <div id="question-display">Enter question above!</div>
         The ball says:
-        <span id="answer-output">Nothing... yet!</span>
+        <div id="answer-output">Nothing... yet!</div>
     </div>
 </div>
