--- a/views/pages/fun/random-fact.hbs
+++ b/views/pages/fun/random-fact.hbs
@@ -1,4 +1,4 @@
 <div class="tooltext">
-    <span id="fact">Loading...</span>
-    <br /><button id="get-fact" style="padding: 0.5rem; margin-top: 15px">New Fact</button>
+    <div id="fact-output">Loading...</div>
+    <button id="get-fact" style="padding: 0.5rem; margin-top: 15px">New Fact</button>
 </div>
