--- a/views/pages/fun/random-joke.hbs
+++ b/views/pages/fun/random-joke.hbs
@@ -1,4 +1,4 @@
 <div class="tooltext">
-    <span id="joke">Loading...</span>
-    <br /><button id="get-joke" style="padding: 0.5rem; margin-top: 15px">New Joke</button>
+    <div id="joke-output">Loading...</div>
+    <button id="get-joke" style="padding: 0.5rem; margin-top: 15px">New Joke</button>
 </div>
