--- a/views/pages/info/queer-calendar.hbs
+++ b/views/pages/info/queer-calendar.hbs
@@ -1,7 +1,7 @@
 <div class="tooltext">
-    <span id="events-title" style="font-size: 25px">Current Events:</span><br />
+    <div id="events-title" style="font-size: 25px">Current Events:</div>
 
-    <span id="events" style="color: mediumspringgreen; display: block; padding-bottom: 25px"><span class="error">Loading data...</span></span>
+    <div id="events" style="color: mediumspringgreen; display: block; padding-bottom: 25px"><span class="error">Loading data...</span></div>
 
     Month:
     <input id="month" type="text" pattern="[0-9]*" max="12" maxlength="2" style="width: 30px" />
