--- a/views/pages/tools/base64-image-converter.hbs
+++ b/views/pages/tools/base64-image-converter.hbs
@@ -1,10 +1,11 @@
 <div class="tooltext">
     <div class="basic-grid" style="--min-width: 450px">
         <div class="tooltext">
-            Image:<br /><br />
+            Image:<br />
             <label id="file-upload-label" for="file-upload" class="file-upload"><i class="fa-solid fa-file-upload"></i> Upload</label>
-            <input id="file-upload" type="file" /><br /><span style="font-size: 14px; color: dimgray" id="file-message"></span>
-            <br /><button id="encode">Encode <i id="encode-result"></i></button>
+            <input id="file-upload" type="file" />
+            <div style="font-size: 14px; color: dimgray; min-height: 1em" id="file-message"></div>
+            <button id="encode">Encode <i id="encode-result"></i></button>
             <button id="clear">Clear</button>
         </div>
         <div class="tooltext">
