--- a/views/pages/tools/binary-calc.hbs
+++ b/views/pages/tools/binary-calc.hbs
@@ -11,8 +11,8 @@
 </div>
 <hr style="margin-top: 30px" />
 <div class="tooltext">
-    Output:<br />
-    <span id="message" class="error" style="font-size: 15px"></span>
+    Output:
+    <div id="message" class="error" style="font-size: 15px"></div>
     <select style="margin-top: 20px" id="output-type">
         <option value="1" selected>Binary (2)</option>
         <option value="2">Octal (8)</option>
