--- a/views/pages/tools/ip-info.hbs
+++ b/views/pages/tools/ip-info.hbs
@@ -3,7 +3,7 @@
     <em>not</em>
     your actual location.
 
-    <br /><br /><span id="reload-prompt" class="error">If you see this message, please reload the page.<br /></span>
+    <div id="reload-prompt" class="error">If you see this message, please reload the page.</div><br />
 
     <span class="tooltip-right" data-tooltip="Internet Protocol">IP</span>
     Address:
