--- a/views/pages/tools/keycode-info.hbs
+++ b/views/pages/tools/keycode-info.hbs
@@ -1,6 +1,6 @@
 <div class="tooltext">
-    <span id="ready"><span style="color: #009c3f"><i class="fa-solid fa-check"></i> Ready to get key information!</span></span>
-    <br /><br />Click any key to get information, click any cell to copy the information.
+    <div id="ready"><span style="color: #009c3f"><i class="fa-solid fa-check"></i> Ready to get key information!</span></div>
+    <br />Click any key to get information, click any cell to copy the information.
     <table class="keycodes">
         <thead>
             <tr style="color: #595959">
