--- a/views/pages/tools/length-converter.hbs
+++ b/views/pages/tools/length-converter.hbs
@@ -19,8 +19,8 @@
 </div>
 <hr style="margin-top: 30px" />
 <div class="tooltext">
-    <span class="tooltip-bottom" data-tooltip="Rounded to the nearest trillionth">Output</span>:<br />
-    <span id="message" class="error" style="font-size: 15px"></span>
+    <span class="tooltip-bottom" data-tooltip="Rounded to the nearest trillionth">Output</span>:
+    <div id="message" class="error" style="font-size: 15px"></div>
     <select style="margin-top: 20px" id="output-type">
         <option value="1">Kilometer</option>
         <option value="2">Meter</option>
