--- a/views/pages/tools/quick-copy.hbs
+++ b/views/pages/tools/quick-copy.hbs
@@ -14,7 +14,7 @@
     </div>
     <div class="tooltext" style="line-height: 100%">
         Current Clipboard:<br /><br />
-        <span class="error" style="font-size: 14px" id="clipboard-warning"><i class="fa-solid fa-exclamation-triangle"></i> Permission to read clipboard denied!<br /></span>
+        <div class="error" style="font-size: 14px" id="clipboard-warning"><i class="fa-solid fa-exclamation-triangle"></i> Permission to read clipboard denied!</div>
         <textarea id="copied-text" style="width: 60%" readonly></textarea><br />
         <button id="select-clipboard" disabled>Select Clipboard</button>
     </div>
