--- a/views/pages/tools/radical-simplifier.hbs
+++ b/views/pages/tools/radical-simplifier.hbs
@@ -18,5 +18,5 @@
 <div class="tooltext">
     Result:<br />
     <span id="output" class="code hidden" style="color: dimgray"></span>
-    <span id="message"></span>
+    <span id="message" style="color: dimgray; font-size: 16px">Nothing yet!</span>
 </div>
