--- a/views/pages/tools/unix-time-converter.hbs
+++ b/views/pages/tools/unix-time-converter.hbs
@@ -6,14 +6,14 @@
             <br /><button id="standard-input-reset">Set to current time</button>
             <br /><i class="fa-solid fa-arrow-down" style="color: #009c3f; font-size: 30px; margin-left: 100px; margin-top: 20px" id="standard-arrow"></i>
             <div class="tooltext">
-                <span id="unix-output-title">UNIX Time (seconds):</span><br />
+                <div id="unix-output-title">UNIX Time (seconds):</div>
                 <input id="unix-output" style="width: 150px; max-width: 50%" readonly />
                 <br /><button id="unix-output-copy" disabled>Copy</button>
                 <button id="unix-output-switch" disabled>Switch to milliseconds</button>
             </div>
         </div>
         <div class="tooltext">
-            <span id="unix-input-title">UNIX Time (seconds):</span><br />
+            <div id="unix-input-title">UNIX Time (seconds):</div>
             <input id="unix-input" style="width: 150px; max-width: 50%" />
             <br /><button id="unix-input-reset">Set to current time</button>
             <button id="unix-input-switch">Switch to milliseconds</button>
