--- a/views/pages/tools/image-converter.hbs
+++ b/views/pages/tools/image-converter.hbs
@@ -1,10 +1,10 @@
 <div class="tooltext">
     <div class="basic-grid" style="--min-width: 450px">
         <div class="tooltext">
-            Image:<br /><br />
+            Image:<br />
             <label id="file-upload-label" for="file-upload" class="file-upload"><i class="fa-solid fa-file-upload"></i> Upload</label>
-            <input id="file-upload" type="file" accept="image/*" /><br /><span style="font-size: 14px; color: dimgray" id="file-message"></span>
-            <br />
+            <input id="file-upload" type="file" accept="image/*" />
+            <div style="font-size: 14px; color: dimgray; min-height: 1em" id="file-message"></div>
             <button id="load" disabled>Load</button>
             <button id="clear">Clear</button>
         </div>
