--- a/views/pages/tools/temperature-converter.hbs
+++ b/views/pages/tools/temperature-converter.hbs
@@ -11,8 +11,8 @@
 </div>
 <hr style="margin-top: 30px" />
 <div class="tooltext">
-    <span class="tooltip-bottom" data-tooltip="Rounded to the nearest thousandth">Output</span>:<br />
-    <span id="message" class="error" style="font-size: 15px"></span>
+    <span class="tooltip-bottom" data-tooltip="Rounded to the nearest thousandth">Output</span>:
+    <div id="message" class="error" style="font-size: 15px"></div>
     <select style="margin-top: 20px" id="output-type">
         <option value="1">Fahrenheit</option>
         <option value="2" selected>Celsius</option>
