--- a/views/pages/tools/tides-info.hbs
+++ b/views/pages/tools/tides-info.hbs
@@ -1,3 +1,3 @@
 <div class="tooltext">
-    <span id="result">Fetching tidal data <i class="fa-solid fa-spinner fa-pulse"></i></span>
+    <div id="result">Fetching tidal data <i class="fa-solid fa-spinner fa-pulse"></i></div>
 </div>
